if Full, desplegable